--- a/abc_comprehensivecba_HT.tex
+++ b/abc_comprehensivecba_HT.tex
@@ -2,34 +2,18 @@
 \input{preamble}
 \input{output/mainstatistics}
 
-\externaldocument{abc_comprehensivecba_appendix-pub_2016-11-10a_sjs}
-\externaldocument{abc_comprehensivecba_appendix-priv_2016-11-08b}
-\externaldocument{abc_comprehensivecba_2016-11-10a_sjs}
+\externaldocument{abc_comprehensivecba}
+\externaldocument{abc_comprehensivecba}
+\externaldocument{abc_comprehensivecba}
 \pagenumbering{roman}
 
 \begin{document}
 
 \begin{titlepage}
 
-\title{\Large \textbf{The Long-Term Economic and Social Benefits of an Influential Early Childhood Intervention\\ HOLDING TANK}}
+\title{\Large \textbf{HOLDING TANK \\  Quantifying the Life-cycle Benefits of a Prototypical Early Childhood Program}}
 
-\author{
-Jorge Luis Garc\'{i}a\\
-The University of Chicago \and
-James J. Heckman \\
-American Bar Foundation \\
-The University of Chicago \and
-Andr\'{e}s Hojman\\
-The University of Chicago \and
-Duncan Ermini Leaf \\
-University of Southern California \and
-Mar\'{i}a Jos\'{e} Prados \\
-University of Southern California \and
-Joshua Shea \\
-The University of Chicago \and
-Jake C. Torcasso\\
-The University of Chicago}
-\date{First Draft: January 5, 2016\\ This Draft: \today}
+\date{This Draft: \today}
 
 \maketitle
 
@@ -41,6 +25,137 @@ The University of Chicago}
 
 \setcounter{page}{0}
 \pagenumbering{arabic}\
+
+\subsection{Randomization Protocol and Compromises} \label{section:randomization}
+
+Randomization for ABC/CARE was conducted on child pairs matched on family background. Siblings and twins were jointly randomized into either treatment or control groups.\footnote{For siblings, this occurred when two siblings were close enough in age such that both of them were eligible for the program.} Randomization pairing was based on a risk index, maternal education, maternal age, and gender of the subject.\footnote{We do not know the original pairs.} ABC collected an initial sample of 121 subjects. We characterize each missing observation in Appendix~\ref{appendix:background}. In Appendix~\ref{appendix:estimates}, we document that our estimates are robust when we adjust for missing data using standard methods, described in Appendix~\ref{app:method_partialobs}. We conduct the same analysis for the CARE sample. 22 subjects in ABC did not stay in the program through age 5. Dropouts are evenly balanced and are primarily related to the health of the child and mobility of families and not to dissatisfaction with the program.\footnote{The 22 dropouts include four children who died, four children who left the study because their parents moved, and two children who were diagnosed as developmentally delayed. Details are in Table~\ref{table:abccompromises}. Everyone offered the program was randomized to either treatment or control. All eligible families agreed to participate. Dropping out occurs \emph{after} randomization.}
+
+\subsection{Control Group Substitution}
+
+In ABC/CARE, many control group members (but no children from families offered treatment) attended alternative (to home) childcare or preschool centers.\footnote{See \cite{Heckman_Hohmann_etal_2000_QJE} on the issue of substitution bias in social experiments.} The figure is \treatsubsabc\ for ABC and \treatsubscarec\ for CARE.
+
+\begin{sidewaysfigure}[!htbp]
+\centering
+\caption{Control Substitution Characteristics, ABC/CARE Control Group}\label{fig:control-sub}
+\begin{subfigure}[h]{0.49\textwidth}
+	\centering
+	\caption{Cumulative Enrollment} \label{fig:treatsubcare}
+	\includegraphics[width=\textwidth]{output/abccare_controlcontamination.eps}
+\end{subfigure}
+\begin{subfigure}[h]{0.49\textwidth}
+	\centering
+	\caption{Enrollment Dynamics} \label{fig:proportion-alt-pre}
+	\includegraphics[width=\textwidth]{output/abccare_Vprobs.eps}
+\end{subfigure}%
+\footnotesize \justify
+Note: Panel (a) displays the cumulative distribution function of enrollment in alternatives. Panel (b) displays the fraction of ABC/CARE control-group children enrolled in alternatives, conditional on being enrolled in the previous age (at least one month).\\
+\end{sidewaysfigure}
+
+Figure~\ref{fig:treatsubcare} shows the cumulative distribution of the proportion of time in the first five years that control subjects were enrolled in alternatives. Figure~\ref{fig:proportion-alt-pre} shows the dynamics of enrollment. Those who enroll generally stay enrolled. As control children age, they are more likely to enter childcare (see Appendix~\ref{app:control-subbb}).
+
+Children in the control group who are enrolled in alternative early childcare programs are less economically disadvantaged at baseline compared to children who stay at home. Disadvantage is measured by maternal education, maternal IQ, Apgar scores, and the high-risk index defining ABC/CARE eligibility. Children who attend alternatives have fewer siblings. On average, they are children of mothers who are more likely to be working at baseline.\footnote{Statistically significant at 10\%.} Parents of girls are much more likely to use alternative childcare if assigned to the control group.\footnote{See Table~\ref{table:controlsubscharacteristics} in Appendix~\ref{appendix:background} for tests of differences across these variables between children in the control group who attended and who did not attend alternative preschools.}
+
+Most of the alternative childcare centers received federal subsidies and were subject to the federal regulations of the era.\footnote{Appendix~\ref{appendix:tetanus} discusses the federal standards of that day. See \citet{Department-of-Health_1968_DayCareRequirements,NCGA_1971_House-Bill-100,Ramey-et-al_1977_Intro-to-ABC,Ramey_Campbell_1979_SR,Ramey_McGinness_etal_1982_Abecedarianapproach, Burchinal_Campbell_etal_1997_CD}.} They had relatively low quality compared to ABC/CARE.\footnote{When we compare ABC/CARE treatment to these alternatives, ABC/CARE has substantial treatment effects. Further, as we argue below, parents perceived that ABC/CARE was superior to the alternatives.} The access of control-group children to alternative programs affects the interpretation of estimated treatment effects, as we discuss next.
+
+\section{Summarizing Multiple Treatment Effects} \label{section:methodology}
+
+ABC/CARE has rich longitudinal data on multiple outcomes over multiple periods of the life cycle. Summarizing these effects in an interpretable way is challenging.\footnote{Appendix~\ref{appendix:results} presents step-down $p$-values for the blocks of outcomes that are used in our benefit/cost analysis which we summarize in this section (\citealp{Lehman_Romano_2005_AnnStat} and \citealp{Romano_Shaikh_2006_AnnStat}). We follow the algorithm in \citet{Romano_Wolf_2016_pval_SaPL}.} Simpler, more digestible summary measures are useful for understanding our main findings. This section discusses our approach to summarizing vectors of treatment effects using combining functions that count the proportion of treatment effects by different categories of outcomes.
+
+Consider a block of $N_l$ outcomes indexed by set $Q_l = \{1,\dots,N_l\}$. Let $j \in Q_l$ be a particular outcome within block $l$. Associated with it is a mean treatment effect
+\begin{equation}
+\Delta_{j,a} : = \mathbb{E} \left[ Y^1_{j,a} - Y^0_{j,a} | \bm{B} \in \mathcal{B}_0 \right], j \in Q_l.
+\end{equation}
+
+We assume that outcomes can be ordered so that $\Delta_{j,t} >0$ is beneficial.\footnote{All but 5\% of the outcomes we study can be ranked in this fashion. See Appendix~\ref{appendix:results} for a discussion.} We summarize the estimated effects of the program on outcomes within the block by the count of positive impacts within block $l$:
+\begin{equation}
+C_l = \sum^{N_l}_{j=1} 1 (\hat{\Delta}_{j,a} >0).
+\end{equation}
+The proportion of beneficial outcomes in block $l$ is $C_l / N_l$.\footnote{In our empirical application we consider all the outcomes as a block, and then different blocks grouped according to common categories---e.g., skills, health, crime.}
+
+Let $\mathcal{L}$ be the set of blocks. Under the null hypothesis of no treatment effects for all $j \in Q_l, l \in \mathcal{L}$, and assuming the validity of asymptotic approximations, $C_l / N_l$ should be centered around $1/2$. This is true regardless of any statistical dependence among the outcomes. We bootstrap to obtain $p$-values for the null for each block and over all blocks. Bootstrapping allows us to account for dependence across outcomes in a general way. We also count the beneficial treatment effects that are statistically significant in the sets of outcomes across each of the groups indexed by the set $Q_l$. Using a 10\% significance level, on average 10\% of all outcomes should be ``significant'' at the 10\% level even if there is no treatment effect of the program. We provide evidence against both null hypotheses.\footnote{In this case, we perform a ``double bootstrap'' procedure to first determine significant treatment effects at $10\%$ level and then calculate the standard error of the count.} Combining counts across all blocks enables us to avoid (i) arbitrarily picking outcomes that have statistically significant effects---``cherry picking''; or (ii) arbitrarily selecting blocks of outcomes to correct the $p$-values when accounting for multiple hypothesis testing.\footnote{We present $p$-values for these hypotheses and a number of combining functions by outcome categories in Appendix~\ref{appendix:results}.}$^{\text{,}}$\footnote{In Appendix~\ref{appendix:results} we present yet another alternative. We calculate a ``latent'' outcome out of the set of outcomes within a block and perform inference on this latent. The results point to beneficial effects of the program in this case as well.}
+
+\section{Estimated Treatment Effects and Combining Functions}\label{section:c-functions}
+
+ABC/CARE has a multiplicity of treatment effects corresponding to all of the measures collected in the multiple waves of the longitudinal surveys. Reporting these treatment effects in the text would overwhelm the reader. In Web Appendix~\ref{appendix:results}, we report estimates of the main treatment effects that underlie our benefit/cost and rate of return analyses.\footnote{Web Appendix~\ref{appendix:results} reports treatment effects and step-down $p$-values for all the outcomes analyzed. These account for multiple hypothesis testing as in \citet{Lehman_Romano_2005_AnnStat} and \citet{Romano_Shaikh_2006_AnnStat}.} These treatment effects are monetized in Section~\ref{section:cbamethodology} to present an economically justified aggregate measure.
+
+Evidence from ABC/CARE and many other early childhood programs is often criticized because of their small sample sizes.\footnote{See, e.g., \cite{Murray_2013_GivingKids_JJHBOOK}.} An extensive analysis reported in \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} shows that asymptotic inference and small sample permutation-based inference closely agree when applied to ABC/CARE data. For this reason, we use large sample inference throughout this paper.\footnote{For precise details on the construction of the inference procedures used throughout the paper, see Appendix~\ref{appendix:bootstrap}.}
+
+\subsection{Estimated Combining Functions}
+
+We report estimates of the proportion of beneficial effects by block and overall.\footnote{We consider a total of 95 outcomes that we classify in Appendix~\ref{appendix:results}. \textbf{[JJH: Jorge, fix G and discuss]} These are the outcomes that most clearly relate to the treatment offered by the program.} The analysis is based on treatment effect \eqref{eq:effect}. Figure~\ref{fig:ppositive} displays the results from this analysis: ABC/CARE positively impacted a large percentage of the outcomes. We show the counts for treatment compared to the next best alternative chosen by parents in Figure~\ref{fig:ppositivenb}. Proportionately more outcomes are beneficial for females, but the proportions are high for both groups and well above the benchmark of 1/2. In Tables~\ref{table:abccare_rslt_pooled_counts} to \ref{table:abccare_rslt_female_counts_n10a10} of Appendix~\ref{appendix:results}, we document a large and precisely determined fraction of beneficial treatment effects well above one half for both genders for categories of outcomes spanning the life cycle through the mid 30's.
+
+Using an $\alpha$-level of significance, one would expect to find that $\alpha\%$ of the treatment effects are ``statistically significant,'' even if the null hypothesis of no effect of the program is true simply by chance. At a 10\% level of significance, $46\%$ are statistically significant for females and $28\%$ for males (see Figure~\ref{fig:ppositive10}).
+
+Figures~\ref{fig:ppositivehome} and Figure~\ref{fig:ppositivealternative} adjust the count in Figure~\ref{fig:ppositivenb} to analyze more clearly defined counterfactuals: treatment compared to staying at home and treatment compared to alternative preschool. These comparisons indicate that girls and boys benefit differently from alternatives to high quality treatment. Compared across all categories, girls benefit more from treatment when compared to staying at home (as opposed to attending alternative childcares), while males benefit more from treatment when compared to attending an alternative childcare arrangement (as opposed to staying at home).
+
+\begin{sidewaysfigure}[!htbp]
+\centering
+\caption{Positively Impacted Outcomes, ABC/CARE Males and Females}\label{fig:ppositive}
+\begin{subfigure}[h]{0.4\textwidth}
+		\centering
+		\caption{Treatment vs. Next Best} \label{fig:ppositivenb}
+		\includegraphics[width=\textwidth]{output/itt_noctrl_all.eps}
+\end{subfigure}%
+\begin{subfigure}[h]{0.4\textwidth}
+	\centering
+	\caption{Treatment vs. Next Best, Significant at 10\% Level} \label{fig:ppositive10}
+		\includegraphics[width=\textwidth]{output/itt_noctrl_all_sig10.eps}
+\end{subfigure}
+\begin{subfigure}[h]{0.4\textwidth}
+		\centering
+		\caption{ Treatment vs. Stay at Home} \label{fig:ppositivehome}
+		\includegraphics[width=\textwidth]{output/epan_ipw_p0_all.eps}
+\end{subfigure}%
+\begin{subfigure}[h]{0.4\textwidth}
+	\centering
+	\caption{Treatment vs. Alternative Preschool} \label{fig:ppositivealternative}
+		\includegraphics[width=\textwidth]{output/epan_ipw_p1_all.eps}
+\end{subfigure}
+\scriptsize \justify
+Note: Panel (a) percentage of outcomes displaying a positive treatment effect, comparing treatment to next best. Panel (b) percentage of outcomes displaying a positive and statistically significant treatment effect (10\% significance level). Panel (c) displays the percentage of outcomes with a positive treatment effect, comparing treatment to staying at home. Panel (d) displays the percentage of outcomes with a positive treatment effect, comparing treatment to alternative childcare arrangements. Standard errors are based on the empirical bootstrap distribution. For Panel (b) we perform a ``double bootstrap'' procedure to first determine significant treatment effects at $10\%$ level and then calculate the standard error of the count.\\
+\end{sidewaysfigure}
+
+\section[Background and Data Sources]{Background and Data Sources} \label{section:background}
+\subsection{Overview}
+
+ABC/CARE targeted disadvantaged, predominately African-American children in Chapel Hill/Durham, North Carolina.\footnote{Both ABC and CARE were designed and implemented by researchers at the Frank Porter Graham Center of the University of North Carolina in Chapel Hill.} Table~\ref{tab:programcomparison} compares the two virtually identical programs. Appendix~\ref{appendix:background} describes these programs in detail. Here, we summarize their main features.
+
+The goal of these programs was to enhance the early-life skills of disadvantaged children. Both programs supported language, motor, and cognitive development as well as socio-emotional competencies considered crucial for school success including task-orientation, ability to communicate, independence, and pro-social behavior.\footnote{\citet{Ramey_Collier_etal_1976_CarolinaAbecedarianProject, Ramey_etal_1985_Project-CARE_TiECSE, Sparling_1974_Synth_Edu_Infant_SPEECH, Wasik_Ramey_etal_1990_CD, Ramey-etal_2012-ABC}.}
+
+The programs individualized treatment. Each child's progress was recorded and learning activities were appropriately adjusted every 2 to 3 weeks. Environments were organized to promote pre-literacy and provide access to a rich set of learning tools.\footnote{The ``LearningGames'' approach was implemented by infant and toddler caregivers in 1:1 child-adult interactions. Each ``LearningGames'' activity states a developmentally-appropriate objective, the necessary materials, directions for teacher behavior, and expected child outcome.} The curriculum emphasized active learning experiences, dramatic play, and basic concepts of order and category (``pre-academic skills''), as well as discipline and the ability to interact with and respect others.  At later ages (3 through 5), the program focused on the development of ``socio-linguistic and communicative competence.''\footnote{\citet{Ramey-et-al_1977_Intro-to-ABC, Haskins_1985_CD, Ramey_1981_Modification, Ramey_Campbell_1979_SR, Ramey_Smith_1977_AJMD, Ramey_McGinness_etal_1982_Abecedarianapproach, Sparling_Lewis_1979_BOOKLearninggamesFirstThree,Sparling_Lewis_1984_BOOKLearningGamesThreesFours}.}
+
+ABC recruited four cohorts of children born between 1972 and 1976. CARE recruited two cohorts of children, born between 1978 and 1980. The recruitment processes for each study were identical. Potential participant families were referred to researchers by local social service agencies and hospitals at the beginning of the mother's last trimester of pregnancy. Eligibility was determined by a score on a childhood risk index.\footnote{See Appendix~\ref{appendix:background} for details on the construction for the index used. The index weighs the following variables (listed from the most to the least important according to the index): maternal and paternal education, family income, father's presence at home, lack of maternal relatives in the area, siblings behind appropriate grade in school, family in welfare, father in unstable job, maternal IQ, siblings' IQ, social agency indicates that the family is disadvantaged, one or more family members has sought a form of professional help in the last three years, and any other special circumstance detected by program's staff.}
+
+As shown in Table~\ref{tab:programcomparison}, the design and implementation of ABC and CARE were very similar. ABC had two phases, the first of which lasted from birth until age 5. In this phase, children were randomly assigned to treatment. The second phase of the study consisted of child academic support through home visits from ages 5 through 8. CARE consisted of two treatment phases as well that were very similar to ABC. The first phase of CARE from birth until age 5, had an additional treatment arm of home visits designed to improve home environments.\footnote{\citet{Wasik_Ramey_etal_1990_CD}.} Participation in the second phase was randomized in ABC, but not in CARE.
+
+Our analysis is based on the first phase and pools the CARE treatment group with the ABC treatment group. The second-phase treatment of ABC/CARE had little impact on participants (for evidence, see \citealp{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} and \citealp{ABCCARE_Dataset}). \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} establish the validity of pooling the data on second phase treatments and controls with the first phase controls in ABC.
+
+We do not use the data on the CARE group that only received home visits in the early years. \citet{Campbell_Conti_etal_2014_EarlyChildhoodInvestments} and \citet{ABCCARE_Dataset} show that there is no statistically significant effect of this component.
+
+For the treatment phase that we analyze, the center received the treated children from 7:45 a.m. to 5:30 p.m, five days a week and fifty weeks a year. As we argue below, in practice the center had a very relevant childcare component that caused gains in parental labor income.
+
+\begin{table}[!htbp]
+\centering
+\caption{ABC and CARE, Program Comparison} \label{tab:programcomparison}
+\begin{adjustbox}{max width=\textwidth}
+\begin{threeparttable}
+	\small
+	\input{output/abccare_programcomparison.tex}
+\begin{tablenotes}
+\small
+\item Note: This table compares the main elements of ABC and CARE, summarized in this section. A \checkmark\ indicates that ABC and CARE had the same feature. A blank space indicates that the indicated component was not part of the program.\\
+    $^*$ As documented in Appendix~\ref{app:eligibility-pop}, there were losses in the initial samples due to death, parental moving, and diagnoses of mental pathologies for the children.
+\end{tablenotes}
+\end{threeparttable}
+\end{adjustbox}
+\end{table}
+
+For both programs, from birth until the age of 8, data were collected annually on cognitive and socio-emotional skills, home environments, family structure, and family economic characteristics. After age 8, data on cognitive and socio-emotional skills, education, and family economic characteristics were collected at ages 12, 15, 21, and 30.\footnote{At age 30, measures of cognitive skills are unavailable for both ABC and CARE.} In addition, we have access to administrative criminal records and a physician-administered medical survey at the mid 30's. This allows us to study the long-term effects of the programs along multiple dimensions of human development.\footnote{See Appendix~\ref{appendix:data} for a more comprehensive description of the data. There, we document the balance in observed baseline characteristics across the treatment and control groups, once we drop the individuals for whom we have no crime or health information, for which there is substantial attrition. Further, the methodology we propose addresses missing data in either of these two outcome categories.}
+
+
+\subsection{Program Costs} \label{section:programscosts}
+
+The yearly cost of the program was \$18,514 per participant in 2014 USD. We improve on previous cost estimates using primary-source documents.\footnote{Our calculations are based on progress reports written by the principal investigators and related documentation recovered in the archives of the research center where the program was implemented. We display these sources in Appendix \ref{app:programcosts}. The main component is staff costs. Other costs arise from nutrition and services that the subjects receive when they were sick, diapers during the first 15 months of their lives, and transportation to the center. The control-group children also receive diapers during approximately 15 months, and iron-fortified formula. The costs are based on sources describing ABC treatment for $52$ children. We use the same costs estimates for CARE, for which there is less information available. The costs exclude any expenses related to research or policy analysis. A separate calculation by the implementers of the program indicates almost an identical amount (see Appendix~\ref{app:programcosts}).}
 
 \begin{center}
 Note for file on CBA\\
